--- a/SportsVillage/package.json
+++ b/SportsVillage/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@gorhom/bottom-sheet": "^4.4.5",
     "@react-native-firebase/app": "^16.5.2",
     "@react-native-firebase/auth": "^16.5.0",
     "@react-native-firebase/firestore": "^16.5.2",
@@ -25,6 +26,9 @@
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-calendars": "^1.1293.0",
+    "react-native-gesture-handler": "^2.9.0",
+    "react-native-haptic-feedback": "^1.14.0",
+    "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-svg": "^13.6.0"
