--- a/SportsVillage/tsconfig.json
+++ b/SportsVillage/tsconfig.json
@@ -5,8 +5,8 @@
     /* Visit https://aka.ms/tsconfig.json to read more about this file */
 
     /* Completeness */
-    "skipLibCheck": true           ,
-    "baseUrl": "./"                      /* Skip type checking all .d.ts files. */
+    "skipLibCheck": true, /* Skip type checking all .d.ts files. */
+    "baseUrl": "./"                      
   },
   "include": ["src"]
 }
