--- a/SportsVillage/package.json
+++ b/SportsVillage/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@gorhom/bottom-sheet": "^4.4.5",
+    "@invertase/react-native-apple-authentication": "^2.2.2",
     "@react-native-firebase/app": "^16.5.2",
     "@react-native-firebase/auth": "^16.5.0",
     "@react-native-firebase/firestore": "^16.5.2",
